navigating to home

--- a/project/HTML/orca.html
+++ b/project/HTML/orca.html
@@ -11,7 +11,7 @@
 <body class="orca-background">
     <div class="navbar">
         <img src="../Images/Creaturepedia.png" alt="Logo" class="logo">
-        <a href="#" class="nav-item">Home</a>
+        <a href="./index.html" class="nav-item">Home</a>
         <a href="#" class="nav-item">About</a>
         <form action="#" class="search-form">
             <input type="text" placeholder="Search..." class="search-bar">
