--- a/project/HTML/index salma login.HTML
+++ b/project/HTML/index salma login.HTML
@@ -3,9 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <title>Creaturepedia</title>
-<link rel="icon" type="image/x-icon" href="logo.png"> <!-- favicon by logo -->
-<link rel="stylesheet" href="css/main salma login.css">
-<script src="main salma login .js"></script>
+<link rel="icon" type="image/x-icon" href="../Images/Creaturepedia.png"> <!-- favicon by logo -->
+<link rel="stylesheet" href="../CSS/main salma login.css">
+<script src="../JavaScript/main salma login .js"></script>
 <style>
     body, html {
         margin: 0;
@@ -49,11 +49,11 @@ a:hover, a:active {
 </head>
 <body>
     <video autoplay loop muted id="video-background">
-    <source src="flock-of-seagulls-in-the-sky.mp4" type="video/mp4">
+    <source src="../Media/flock-of-seagulls-in-the-sky.mp4" type="video/mp4">
     Your browser does not support the video tag.
 </video>
 <nav>
-    <img src="logo.png" alt="Logo" class="logo">
+    <img src="../Images/Creaturepedia.png" alt="Logo" class="logo">
     <ul> <!--nav bar-->
         <li><a href="#">Home</a></li>
         <li><a href="#">About</a></li>
@@ -69,7 +69,7 @@ a:hover, a:active {
 <label for="male">Male</label><br>
 <input type="radio" id="female" name="Gender" value="Female">
     <label for="female">Female</label><br>
-    <form name="myForm" action="index rowayda.html" onsubmit="return validateForm()" method="post"><!--login form validation-->
+    <form name="myForm" action="./index.html" onsubmit="return validateForm()" method="post"><!--login form validation-->
             <label for="email">Email:</label> 
             <input type="text" id="email" name="email">
             <span id="emailError" class="error"></span><br>
