--- a/project/HTML/index.html
+++ b/project/HTML/index.html
@@ -47,7 +47,7 @@
             <div class="image-description">
                 <img class="air" src="https://c1.staticflickr.com/5/4184/33739058474_5bca07f4f4_b.jpg" alt="Avian Species">
                 <div class="description">
-                    <a href="#" class="link">
+                    <a href="./Avian Description.html" class="link">
                         <h2 class="animals">Avian Species</h2>
                     </a>
                     <p>Avian species, from eagles to hummingbirds, are adept at navigating the skies with wings, feathers, and hollow bones. They contribute to ecosystems as pollinators, seed dispersers, and predators, but face threats like habitat loss and pollution. Conservation efforts are crucial to safeguard these creatures and their habitats.</p>
