--- a/project/HTML/orca.html
+++ b/project/HTML/orca.html
@@ -19,7 +19,7 @@
         </form>
     </div> 
     <h1 class="jolly-lodger-regular">ORCA Whale</h1>
-    <p>Click on me to hear my sound!</p>
+    <p class="orca-sound">Click on me to hear my sound!</p>
     <img src="../Images/orca.png" alt="OrcaAudio" id="audioButton" class="orca-img" >
                 <audio id="audio" src="../Media/orcasound.mp3" preload="auto"></audio>
                 <script src="../JavaScript/script.js"></script>
@@ -53,7 +53,7 @@
     <video id="myVideo" controls>
         <source src="../Media/orca.mp4" type="video/mp4">
     </video>
-    <h3 class="myVideo">Orcas hunting whales</h3>
+    <p class="myVideo">Orcas hunting whales</p>
     <img class="map" src="../Images/orca range.png.png" alt="">
     <script src="../JavaScript/script.js"></script>
     <div class="flip-card">
