--- a/project/HTML/orca.html
+++ b/project/HTML/orca.html
@@ -11,7 +11,7 @@
 <body class="orca-background">
     <div class="navbar">
         <img src="../Images/Creaturepedia.png" alt="Logo" class="logo">
-        <a href="./index.html" class="nav-item">Home</a>
+        <a href="./Home.html" class="nav-item">Home</a>
         <a href="#" class="nav-item">About</a>
         <form action="#" class="search-form">
             <input type="text" placeholder="Search..." class="search-bar">
@@ -19,7 +19,8 @@
         </form>
     </div> 
     <h1 class="jolly-lodger-regular">ORCA Whale</h1>
-    <p class="orca-sound">Click on me to hear my sound!</p>
+    <button id="various-backgrounds">Another Background!</button>
+    <p class="orcatitle">Click on me to hear my sound!</p>
     <img src="../Images/orca.png" alt="OrcaAudio" id="audioButton" class="orca-img" >
                 <audio id="audio" src="../Media/orcasound.mp3" preload="auto"></audio>
                 <script src="../JavaScript/script.js"></script>
@@ -53,7 +54,7 @@
     <video id="myVideo" controls>
         <source src="../Media/orca.mp4" type="video/mp4">
     </video>
-    <p class="myVideo">Orcas hunting whales</p>
+    <h3 class="myVideo">Orcas hunting whales</h3>
     <img class="map" src="../Images/orca range.png.png" alt="">
     <script src="../JavaScript/script.js"></script>
     <div class="flip-card">
@@ -66,17 +67,16 @@
                 </div>
           </div>
           <div class="flip-card-back">
-            <h3>1)Blackfish (2013) - Directed by Gabriela Cowperthwaite</h3>
-            <p>this documentary explores the consequences of keeping killer whales in captivity, focusing on the story of Tilikum, a performing orca involved in several fatal incidents.</p>
-            <h3>2)Orcas: The Killer Whales (1993)</h3>
-            <p>This documentary, produced by National Geographic, provides an in-depth look at the behavior, social structure, and hunting techniques of orcas in the wild.</p>
-            <h3>3)Orcas in the Wild (2017) - Produced by BBC Earth</h3>
-            <p>this documentary captures stunning footage of orcas in their natural habitat, highlighting their intelligence, communication skills, and complex social interactions.</p>
+            <h4 class="orcadoc">1)Blackfish (2013) - Directed by Gabriela Cowperthwaite</h4>
+            <p class="orcadoc">this documentary explores the consequences of keeping killer whales in captivity, focusing on the story of Tilikum, a performing orca involved in several fatal incidents.</p>
+            <h4 class="orcadoc">2)Orcas: The Killer Whales (1993)</h4>
+            <p class="orcadoc">This documentary, produced by National Geographic, provides an in-depth look at the behavior, social structure, and hunting techniques of orcas in the wild.</p>
+            <h4 class="orcadoc">3)Orcas in the Wild (2017) - Produced by BBC Earth</h4>
           </div>
         </div>
       </div>
     
-    <div class="footer">
+    <div class="homefooter">
         <a href="#" class="Rating">Rating</a>
         <h3 class="contact">Contact Us: </h3>
         <img src="../Images/email.png" alt="Logo" class="gmail">
