--- a/project/HTML/Parrot.html
+++ b/project/HTML/Parrot.html
@@ -28,24 +28,24 @@
    <h1 class="m"> Parrot </h1>
   </div>
 
-   <!-- <div id="parrot-slideshow" class="mslideshow-container">
+    <div id="parrot-slideshow" class="mslideshow-container">
     <div id="parrotslide" class="mslide">
       <img id="parrotslideimage" class="mslide-image1" src="../Images/A Major Mitchell_s Cockatoo.jpg" alt="Image 1">
       <div id="parrotslidecaption" class="mcaption"> <h3>A Major Mitchell's Cockatoo </h3> </div>
     </div>
-    <div id="parrotslide" class="mslide">
+     <div id="parrotslide" class="mslide">
       <img id="parrotslideimage" class="mslide-image2" src="../Images/A orange-bellied parrot.png" alt="Image 2">
       <div id="parrotslidecaption" class="mcaption"><h3> A orange-bellied parrot </h3></div>
-    </div>
+    </div> 
     <div id="parrotslide" class="mslide">
       <img id="parrotslideimage" class="mslide-image3" src="../Images/Eastern Rosella.jpg" alt="Image 3">
       <div id="parrotslidecaption" class="mcaption"><h3> Eastern Rosella </h3></div>
     </div>
-    <div id="parrotslide" class="mslide">
+     <div id="parrotslide" class="mslide">
       <img id="parrotslideimage" class="mslide-image4" src="../Images/New Guinea red-sided eclectus parrots.jpg" alt="Image 4">
       <div id="parrotslidecaption" class="mcaption"><h3> New Guinea red-sided eclectus parrots </h3></div>
     </div>
-  </div> -->
+  </div> 
 
 
    <div id="mvideo-container">
