--- a/project/HTML/Penguin.html
+++ b/project/HTML/Penguin.html
@@ -29,7 +29,7 @@
         and some species can spend months  at sea.
         </p>
       <img src="../Images/penguin-2.jpg" alt="img-2">
-      <p onclick="this.innerHTML='Do u know that There are 18 species of penguin ?'">Click on this text!</p>
+      <p class="penguin-paragraph" onclick="this.innerHTML='Do u know that There are 18 species of penguin ?'">Click on this text!</p>
     </section>
     <section class="middle-sectionP"><!--middle-section-->
         <h1 class="penguin-lifespan">Lifespan</h1>
@@ -51,12 +51,12 @@
     <section class="right-sectionP"><!--righr-section-->
       <img src="../Images/penguin-4.jpg" alt="img-3">
       <h1 class="penguin-diet">Diet</h1>
-      <p>
+      <p class="penguin-paragraph">
         Penguins eat krill, squids, and fishes.
           Their diet varies slightly on the species of penguins, which have slightly different food preferences.
           This reduces competition among species.</p>
       <img src="../Images/penguin-3.jpg" alt="img-4">
-      <p onclick="this.innerHTML='Do u know that Penguins don’t  have teeth ?'">Click on this text!</p><!--on click java-->
+      <p class="penguin-paragraph" onclick="this.innerHTML='Do u know that Penguins don’t  have teeth ?'">Click on this text!</p><!--on click java-->
     </section>
   </div>
   
