--- a/project/HTML/orca.html
+++ b/project/HTML/orca.html
@@ -24,7 +24,7 @@
     <img src="../Images/orca.png" alt="OrcaAudio" id="audioButton" class="orca-img" >
                 <audio id="audio" src="../Media/orcasound.mp3" preload="auto"></audio>
                 <script src="../JavaScript/script.js"></script>
-    <table class="table">
+    <table class="orcatable">
         <thead>
             <tr>
                 <th>Name</th>
@@ -54,7 +54,7 @@
     <video id="myVideo" controls>
         <source src="../Media/orca.mp4" type="video/mp4">
     </video>
-    <h3 class="myVideo">Orcas hunting whales</h3>
+    <h3 class="myVideo"></h3>
     <img class="map" src="../Images/orca range.png.png" alt="">
     <script src="../JavaScript/script.js"></script>
     <div class="flip-card">
