--- a/project/HTML/Marine Description.html
+++ b/project/HTML/Marine Description.html
@@ -11,7 +11,7 @@
     
 
 </head>
-<body class="v-body">
+<body class="marinebody">
         <header class="v-header">
                  <div class="navbar">
         <img src="../Images/Creaturepedia.png" alt="Logo" class="logo">
