--- a/project/HTML/African Elephant.html
+++ b/project/HTML/African Elephant.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
     <title>Creaturepedia</title>
-    <link rel="stylesheet" href="../CSS/style elephant.css">
+    <link rel="stylesheet" href="../CSS/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jolly+Lodger&display=swap" rel="stylesheet">
@@ -25,24 +25,24 @@
 <h1>African Elephant</h1>
 <h3>"African elephants are the largest land animals on Earth."</h3>
 
-<table>
+<table class="eletble">
     <tr>
-            <td><b>SCIENTFIC NAME: </b>Loxodonta Africana </td>
-            <td><b>WEIGHT : </b>2,000 to 6,100 KG</td>
-            <td><b>SIZE : </b>Up to 4 meters</td>
+            <td class="eletd"><b>SCIENTFIC NAME: </b>Loxodonta Africana </td>
+            <td class="eletd"><b>WEIGHT : </b>2,000 to 6,100 KG</td>
+            <td class="eletd"><b>SIZE : </b>Up to 4 meters</td>
     </tr>
 
     <tr>
-        <td><b>LIFE SPAN : </b>60 to 70 years</td>
-        <td><b>HABITAT : </b>Savanna,Grasslands and Arid desserts</td>
-        <td><b>DIET : </b>Herbivorous</td>
-    </tr> 
+        <td class="eletd"><b>LIFE SPAN : </b>60 to 70 years</td>
+        <td class="eletd"><b>HABITAT : </b>Savanna,Grasslands and Arid desserts</td>
+        <td class="eletd"><b>DIET : </b>Herbivorous</td>
+    </tr>  
     <tr>
-        <td><b>GESTATION : </b>About 22 months</td>
-        <td><b class="soundd" >SOUND : </b> <audio controls>
+        <td class="eletd"><b>GESTATION : </b>About 22 months</td>
+        <td class="eletd"><b class="soundd" >SOUND : </b> <audio controls>
 <source src="../Media/elephant-sound.mp3"
  type="audio/mpeg"></audio></td>
-        <td><b>INTELLIGANCE : </b>Very intelligent animals and have good memory</td>
+        <td class="eletd"><b>INTELLIGANCE : </b>Very intelligent animals and have good memory</td>
     </tr>
 
 </table>
@@ -95,19 +95,16 @@
         <img src="../Images/6th-elephant.jpg" alt="Image 6">
         </div>
       <button class="Click" onclick="showNextImage()">To Show Me in My Age Stages, Just Click</button>
-    
     </div>
       <script src="../JavaScript/elephant.js"></script>
 
 
-    <div class="footer">
-        <a href="#" class="Rating">Give Us Your Feedback :)</a>
-        <h3 class="contact">Contact Us: </h3>
-        <img src="../Images/email.png" alt="Logo" class="gmail">
-        <p class="email">creaturepedia@gmail.com</p> 
-    </div>
-
-   
+    <div class="footerld">
+        <a href="#" class="Ratingld">Give Us Your Feedback :)</a>
+        <h3 class="contactld">Contact Us: </h3>
+        <img src="../Images/email.png" alt="Logo" class="elegmail">
+        <p class="emailld">creaturepedia@gmail.com</p> 
+    </div>  
     
 </body>
 </html>
