--- a/project/HTML/Land Description.html
+++ b/project/HTML/Land Description.html
@@ -40,20 +40,20 @@
              preferred habitat based on factors such as climate,
               food availability, and shelter.</p>
 
-        <a href="#" target="-blank">
+        <a href="./White Lion.html" target="-blank">
             <img src="../Images/white-lion.jpeg" alt="whitelion img" class="wlld">
             </a>
          
-        <a href="#" target="-blank">
+        <a href="./African Elephant.html" target="-blank">
             <img src="../Images/elephant.jpeg" alt="africanelephant img" class="aeld">
             </a>
 <p class="wlldtext">Where the savanna whispers, the white lion roars. </p>
 <p class="aeldtext">In the presence of the elephant, silence finds its loudest voice.</p>
 <br><br><br>
-<a href="#" target="-blank">
+<a href="./Giraffe.html" target="-blank">
     <img src="../Images/giraffe.jpeg" alt="giraffe img" class="gld">
     </a>
-<a href="#" target="-blank">
+<a href="./Polar Bear.html" target="-blank">
     <img src="../Images/polar-bears.jpeg" alt="polarbears img" class="pbld">
      </a>
 <p class="gldtext">Graceful necks reach for the sky,
