--- a/project/HTML/Penguin.html
+++ b/project/HTML/Penguin.html
@@ -37,7 +37,7 @@
             The average life expectancy of penguins is likely around 15 to 20 years, with some individuals live considerably longer.
               There is a high mortality rate among the young. For example, the emperor chicks may experience a 90% mortality
               within the first year of life and about 50% of king penguin chicks will not survive due to winter starvation. </p>
-      <video src="../Media/Penguin video.mp4" controls></video>
+      <video class="penvideo" src="../Media/Penguin video.mp4" controls></video>
       <p>To know me more check this website:<br><!--iframe website-->
     Then listen to my voice :)</p> <!--penguin audio sound-->
       <iframe src="https://www.nationalgeographic.com/animals/facts/king-penguin" title="description"></iframe>
