--- a/project/HTML/orca.html
+++ b/project/HTML/orca.html
@@ -36,18 +36,18 @@
         </thead>
         <tbody>
             <tr>
-                <td>Common name: Orca or killer whale</td>
-                <td>Physical description: Orcas have distinctive black and white coloring, with a black dorsal side and white underside. They have a sleek, torpedo-shaped body and a tall dorsal fin.</td>
-                <td>Primary diet: Orcas are apex predators and feed on a variety of prey, including fish, seals, sea lions, and even other cetaceans like dolphins.</td>
-                <td>Reproduction: Female orcas reach sexual maturity around 10-14 years old and have a gestation period of about 15-18 months. They typically give birth to a single calf, which they nurse for up to two years.</td>
-                <td>Orcas are highly intelligent and adaptable predators, known for their complex social structure and cultural behaviors within different populations.</td>
+                <td class="orcatd">Common name: Orca or killer whale</td>
+                <td class="orcatd">Physical description: Orcas have distinctive black and white coloring, with a black dorsal side and white underside. They have a sleek, torpedo-shaped body and a tall dorsal fin.</td>
+                <td class="orcatd">Primary diet: Orcas are apex predators and feed on a variety of prey, including fish, seals, sea lions, and even other cetaceans like dolphins.</td>
+                <td class="orcatd">Reproduction: Female orcas reach sexual maturity around 10-14 years old and have a gestation period of about 15-18 months. They typically give birth to a single calf, which they nurse for up to two years.</td>
+                <td class="orcatd">Orcas are highly intelligent and adaptable predators, known for their complex social structure and cultural behaviors within different populations.</td>
             </tr>
             <tr>
-                <td>Scientific name: Orcinus orca</td>
-                <td>Behavior: Orcas are highly social animals, living in matrilineal pods led by a dominant female. They communicate using vocalizations and echolocation.</td>
-                <td>Feeding habits: They use sophisticated hunting techniques, such as cooperative hunting in groups, to catch prey.</td>
-                <td>Life expectancy: Orcas have a lifespan similar to humans, with females living up to 50-60 years or more, while males have shorter lifespans of around 30-40 years.</td>
-                <td>They are one of the few species known to deliberately beach themselves to hunt seals and sea lions.</td>
+                <td class="orcatd">Scientific name: Orcinus orca</td>
+                <td class="orcatd">Behavior: Orcas are highly social animals, living in matrilineal pods led by a dominant female. They communicate using vocalizations and echolocation.</td>
+                <td class="orcatd">Feeding habits: They use sophisticated hunting techniques, such as cooperative hunting in groups, to catch prey.</td>
+                <td class="orcatd">Life expectancy: Orcas have a lifespan similar to humans, with females living up to 50-60 years or more, while males have shorter lifespans of around 30-40 years.</td>
+                <td class="orcatd">They are one of the few species known to deliberately beach themselves to hunt seals and sea lions.</td>
             </tr>
         </tbody>
     </table>
