--- a/project/HTML/Marine Description.html
+++ b/project/HTML/Marine Description.html
@@ -26,12 +26,12 @@
         <h1 class="vcaption"> MARINE ANIMALS </h1>
 
         <div class="vcontainer">
-        <a href="link1.html" target="_blank" class="vcircular-image-link">
+        <a href="./Octobus.html" target="_blank" class="vcircular-image-link">
             <div class="vcircular-image" id="octopus">
                 <img src="../Images/Octopus.png" alt="Image 1" class="vimg1">
             </div>
         </a>
-        <a href="link2.html" target="_blank" class="vcircular-image-link">
+        <a href="./Turtle.html" target="_blank" class="vcircular-image-link">
             <div class="vcircular-image" id="turtle">
                 <img src="../Images/greenseaturtle.png" alt="Image 2" class="vimg2">
             </div>
