--- a/project/HTML/African Elephant.html
+++ b/project/HTML/African Elephant.html
@@ -98,7 +98,7 @@
     </div>
 
     <div class="footerld">
-        <a href="#" class="Ratingld">Give Us Your Feedback :)</a>
+        <a href="./feedback.html" class="Ratingld">Give Us Your Feedback :)</a>
         <h3 class="contactld">Contact Us: </h3>
         <img src="../Images/email.png" alt="Logo" class="elegmail">
         <p class="emailld">creaturepedia@gmail.com</p> 
