--- a/project/HTML/Avian Description.html
+++ b/project/HTML/Avian Description.html
@@ -46,7 +46,7 @@
 
     <p id="demo"></p>   
     <div class="avfooter">
-        <a href="#" class="Rating">Rating</a>
+        <a href="./feedback.html" class="Rating">Rating</a>
         <h3 class="avcontact">Contact Us: </h3>
         <img src="../Images/email.png" alt="Logo" class="avgmail">
         <p class="avemail">creaturepedia@gmail.com</p>     
