--- a/project/HTML/Eagle.html
+++ b/project/HTML/Eagle.html
@@ -114,7 +114,7 @@
 
 <footer class="Efooter">
     <div class="Efooter">
-        <a href="#" class="ERating">Rating</a>
+        <a href="./feedback.html" class="ERating">Rating</a>
         <h3 class="Econtact">Contact Us: </h3>
         <img src="../Images/email.png" alt="Logo" class="Egmail">
         <p class="Eemail">creaturepedia@gmail.com</p> 
