--- a/project/HTML/Giraffe.html
+++ b/project/HTML/Giraffe.html
@@ -90,7 +90,7 @@
 
 <footer class="gfootercontiner">
     <div class="gfooter">
-        <a href="#" class="gRating">Rating</a>
+        <a href="./feedback.html" class="gRating">Rating</a>
         <h3 class="gcontact">Contact Us: </h3>
         <img src="../Images/email.png" alt="Logo" class="ggmail">
         <p class="gemail">creaturepedia@gmail.com</p> 
