--- a/project/HTML/Home.html
+++ b/project/HTML/Home.html
@@ -56,7 +56,7 @@
         </div>
     </figure>
     <div class="homefooter">
-            <a href="#" class="Rating">Rating</a>
+            <a href="./feedback.html" class="Rating">Rating</a>
             <h3 class="contact">Contact Us: </h3>
             <img src="../Images/email.png" alt="Logo" class="gmail">
             <p class="email">creaturepedia@gmail.com</p> 
