--- a/project/HTML/Marine Description.html
+++ b/project/HTML/Marine Description.html
@@ -73,7 +73,7 @@
   <div class="vtypung-effect" id="vtyping-effect"></div>
   
   <div class="vfooter">
-            <a href="#" class="vRating">Rating</a>
+            <a href="./feedback.html" class="vRating">Rating</a>
             <h3 class="vcontact">Contact Us: </h3>
             <img src="../Images/email.png" alt="Logo" class="vgmail">
             <p class="vemail">creaturepedia@gmail.com</p> 
