--- a/project/HTML/Octobus.html
+++ b/project/HTML/Octobus.html
@@ -100,7 +100,7 @@
 
 
  <div class="sfooter">
-            <a href="#" class="sRating">Rating</a>
+            <a href="./feedback.html" class="sRating">Rating</a>
             <h3 class="scontact">Contact Us: </h3>
             <img src="../Images/email.png" alt="Logo" class="sgmail">
             <p class="semail">creaturepedia@gmail.com</p>
