--- a/project/HTML/Parrot.html
+++ b/project/HTML/Parrot.html
@@ -113,7 +113,7 @@
 
 
 <div class="mfooter">
-            <a href="#" class="mRating">Rating</a>
+            <a href="./feedback.html" class="mRating">Rating</a>
             <h3 class="mcontact">Contact Us: </h3>
             <img src="../Images/email.png" alt="Logo" class="mgmail">
             <p class="memail">creaturepedia@gmail.com</p>
