--- a/project/HTML/Penguin.html
+++ b/project/HTML/Penguin.html
@@ -62,7 +62,7 @@
   
   
   <footer> <!--footer-->
-    <a href="#" class="Rating">Give Us Your Feedback :)</a>
+    <a href="./feedback.html" class="Rating">Give Us Your Feedback :)</a>
     <h3 class="contact">Contact Us: </h3>
     <img src="../Images/email.png" alt="Logo" class="gmail">
     <p class="email">creaturepedia@gmail.com</p> 
