--- a/project/HTML/Polar Bear.html
+++ b/project/HTML/Polar Bear.html
@@ -86,7 +86,7 @@ Mouse Over Me to know me more
 </div>
         </div>
         <footer class="bearfooter">
-            <a href="#" class="bearRating">Give Us Your Feedback :)</a>
+            <a href="./feedback.html" class="bearRating">Give Us Your Feedback :)</a>
             <h3 class="bearcontact">Contact Us: </h3>
             <img src="../Images/email.png" alt="Logo" class="beargmail">
             <p class="bearemail">creaturepedia@gmail.com</p> 
