--- a/project/HTML/Turtle.html
+++ b/project/HTML/Turtle.html
@@ -124,7 +124,7 @@ button.addEventListener('click', () => {
 </script>
 
   <div class="footeres">
-            <a href="#" class="Ratinges">Give Us Your Feedback :)</a>
+            <a href="./feedback.html" class="Ratinges">Give Us Your Feedback :)</a>
             <h3 class="contactes">Contact Us: </h3>
             <img src="../Images/email.png" alt="Logo" class="gmailes">
             <p class="emailes">creaturepedia@gmail.com</p> 
