--- a/project/HTML/White Lion.html
+++ b/project/HTML/White Lion.html
@@ -216,7 +216,7 @@
     </div>
 
     <div class="Lfooter">
-        <a href="#" class="LRating">Rating</a>
+        <a href="./feedback.html" class="LRating">Rating</a>
         <h3 class="Lcontact">Contact Us: </h3>
         <img src="../Images/email.png" alt="Logo" class="Lgmail">
         <p class="Lemail">creaturepedia@gmail.com</p> 
