--- a/project/HTML/Land Description.html
+++ b/project/HTML/Land Description.html
@@ -62,7 +62,7 @@
     the polar bear embodies resilience and beauty</p>
 
     <div class="footerld">
-        <a href="#" class="Ratingld">Give Us Your Feedback :)</a>
+        <a href="./feedback.html" class="Ratingld">Give Us Your Feedback :)</a>
         <h3 class="contactld">Contact Us: </h3>
         <img src="../Images/email.png" alt="Logo" class="gmailld">
         <p class="emailld">creaturepedia@gmail.com</p> 
