--- a/project/HTML/Penguin.html
+++ b/project/HTML/Penguin.html
@@ -61,11 +61,11 @@
   </div>
   
   
-  <footer> <!--footer-->
-    <a href="./feedback.html" class="Rating">Give Us Your Feedback :)</a>
-    <h3 class="contact">Contact Us: </h3>
-    <img src="../Images/email.png" alt="Logo" class="gmail">
-    <p class="email">creaturepedia@gmail.com</p> 
+  <footer class="penfooter"> <!--footer-->
+    <a href="./feedback.html" class="penRating">Give Us Your Feedback :)</a>
+    <h3 class="pencontact">Contact Us: </h3>
+    <img src="../Images/email.png" alt="Logo" class="pengmail">
+    <p class="penemail">creaturepedia@gmail.com</p> 
 </footer> 
 
 </body>
