--- a/project/HTML/African Elephant.html
+++ b/project/HTML/African Elephant.html
@@ -10,17 +10,17 @@
      <link rel="icon" type="image/x-icon" href="logo-removebg.png">
 </head>
 <body>
-        <header>
-                 <div class="navbar">
-        <img src="../Images/Creaturepedia.png" alt="Logo" class="logo">
-        <a href="./Home.html" class="nav-item">Home</a>
-        <a href="#" class="nav-item">About</a>
-        <form action="#" class="search-form">
-            <input type="text" placeholder="Search..." class="search-bar">
-            <button type="submit" class="search-button">Search</button>
+    <header class="headerld">
+        <div class="navbarld">
+        <img src="../Images/Creaturepedia.png" alt="Logo" class="logold">
+        <a href="./Home.html" class="nav-itemld">Home</a>
+        <a href="#" class="nav-itemld">About</a>
+        <form action="#" class="search-formld">
+        <input type="text" placeholder="Search..." class="search-barld">
+        <button type="submit" class="search-buttonld">Search</button>
         </form>
-                 </div>  
-        </header>
+        </div>  
+    </header>
 
 <h1>African Elephant</h1>
 <h3>"African elephants are the largest land animals on Earth."</h3>
