--- a/project/HTML/Avian Description.html
+++ b/project/HTML/Avian Description.html
@@ -27,7 +27,7 @@
         <area shape="rect" coords="20, 185, 130, 430" alt="" href="./Penguin.html">
         <area shape="rect" coords="120,10,175,180" alt="" href="./Parrot.html">
         <area shape="rect" coords="230,160,335,420" alt="" href="./Eagle.html">
-        <area shape="circle" coords="450, 215, 90" href="" alt="">
+        <area shape="circle" coords="450, 215, 90" href="./Atlantic puffin.html" alt="">
     </map>
     <iframe class="iframe" src="https://kids.nationalgeographic.com/animals/birds" title="description"></iframe>
     
