--- a/project/HTML/Home.html
+++ b/project/HTML/Home.html
@@ -10,15 +10,17 @@
     <script src="../JavaScript/script.js"></script>
 </head>
 <body class="homebody">
-    <div class="navbar">
-        <img src="../Images/Creaturepedia.png" alt="Logo" class="logo">
-        <a href="#" class="nav-item">Home</a>
-        <a href="#" class="nav-item">About</a>
-        <form action="#" class="search-form">
-            <input type="text" placeholder="Search..." class="search-bar">
-            <button type="submit" class="search-button">Search</button>
+    <header class="headerld">
+        <div class="navbarld">
+        <img src="../Images/Creaturepedia.png" alt="Logo" class="logold">
+        <a href="./Home.html" class="nav-itemld">Home</a>
+        <a href="#" class="nav-itemld">About</a>
+        <form action="#" class="search-formld">
+        <input type="text" placeholder="Search..." class="search-barld">
+        <button type="submit" class="search-buttonld">Search</button>
         </form>
-    </div> 
+        </div>  
+    </header>
     <button class="greeting" onclick="myFunction()">If you are not a cat, Click on me!</button> 
     <h1 class="jolly-lodger-regular">Creaturepedia</h1>
     <p class="special"> Journey through the pages of Creaturepedia and immerse yourself in the captivating stories of land-dwellers, oceanic marvels, and aerial wonders, each waiting to be explored and admired!</p>
