--- a/project/HTML/Octobus.html
+++ b/project/HTML/Octobus.html
@@ -11,16 +11,18 @@
 
 </head>
 <body class="s-body">
-        <header class="s-header" >
-                 <div class="navbar">
-        <img src="../Images/Creaturepedia.png" alt="Logo" class="logo">
-        <a href="../HTML/Home.html" class="nav-item">Home</a>
-        <a href="#" class="nav-item">About</a>
-        <form action="#" class="search-form">
-            <input type="text" placeholder="Search..." class="search-bar">
-            <button type="submit" class="search-button">Search</button>
-        </form>
-                 </div> 
+        <!-- <header class="s-header" > -->
+          <header class="headerld">
+            <div class="navbarld">
+            <img src="../Images/Creaturepedia.png" alt="Logo" class="logold">
+            <a href="./Home.html" class="nav-itemld">Home</a>
+            <a href="#" class="nav-itemld">About</a>
+            <form action="#" class="search-formld">
+            <input type="text" placeholder="Search..." class="search-barld">
+            <button type="submit" class="search-buttonld">Search</button>
+            </form>
+            </div>  
+        </header>
       
 <div class="sstext">
   <h1 class="sheader1"> OCTOPUS </h1>
@@ -57,11 +59,7 @@
 <div class="stext">
    <h1 class="sheader1"> Take a quick look.. </h1>
    </div>
-   <audio controls>
-    <source src="../Media/Octopus.mp3"
-     type="audio/mpeg">
-    </audio>
-    <button id="playButton" class="scolorful-button"> Octopus Sound</button>
+   
 
  
 <div class="sflip-card">
@@ -85,6 +83,12 @@
   <video width="500" controls>
     <source src="../Media/Octopus.mp4" type="video/mp4" class="soctvid">
   </video>
+
+<label class="octlabel" for="sound"> Octobus Sound!
+   <audio controls>
+    <source src="../Media/Octopus.mp3"
+     type="audio/mpeg">
+    </audio></label>
 </div>
 
 <div id="siframe" style="text-align:center;"><h3 class="sheader1"> HERE'S MORE INFO ABOUT OCTOPUS. </h3>
