--- a/project/HTML/Giraffe.html
+++ b/project/HTML/Giraffe.html
@@ -40,16 +40,16 @@
 
 </head>
 
-<header class="giheader">
-    <div class="navbar">
-        <img src="../Images/Creaturepedia.png" alt="Logo" class="logo">
-        <a href="./Home.html" class="nav-item">Home</a>
-        <a href="#" class="nav-item">About</a> <!-- Added About link -->
-        <form action="#" class="search-form">
-            <input type="text" placeholder="Search..." class="search-bar">
-            <button type="submit" class="search-button">Search</button>
-        </form>
-    </div>
+<header class="headerld">
+    <div class="navbarld">
+    <img src="../Images/Creaturepedia.png" alt="Logo" class="logold">
+    <a href="./Home.html" class="nav-itemld">Home</a>
+    <a href="#" class="nav-itemld">About</a>
+    <form action="#" class="search-formld">
+    <input type="text" placeholder="Search..." class="search-barld">
+    <button type="submit" class="search-buttonld">Search</button>
+    </form>
+    </div>  
 </header>
 
 <body class="giraffebody">
