--- a/project/HTML/Marine Description.html
+++ b/project/HTML/Marine Description.html
@@ -12,16 +12,18 @@
 
 </head>
 <body class="marinebody">
-        <header class="v-header">
-                 <div class="navbar">
-        <img src="../Images/Creaturepedia.png" alt="Logo" class="logo">
-        <a href="./Home.html" class="nav-item">Home</a>
-        <a href="#" class="nav-item">About</a>
-        <form action="#" class="search-form">
-            <input type="text" placeholder="Search..." class="search-bar">
-            <button type="submit" class="search-button">Search</button>
-        </form>
-                 </div> 
+        <!-- <header class="v-header"> -->
+          <header class="headerld">
+            <div class="navbarld">
+            <img src="../Images/Creaturepedia.png" alt="Logo" class="logold">
+            <a href="./Home.html" class="nav-itemld">Home</a>
+            <a href="#" class="nav-itemld">About</a>
+            <form action="#" class="search-formld">
+            <input type="text" placeholder="Search..." class="search-barld">
+            <button type="submit" class="search-buttonld">Search</button>
+            </form>
+            </div>  
+        </header>
        
         <h1 class="vcaption"> MARINE ANIMALS </h1>
 
