--- a/project/HTML/Polar Bear.html
+++ b/project/HTML/Polar Bear.html
@@ -9,17 +9,17 @@
 <script src="../JavaScript/script.js"></script>
 </head>
 <body class="custom-body-polarbear">
-    <header class="bearheader">
-        <div class="navbar"><!--navagtion bar-->
-<img src="../Images/Creaturepedia.png" alt="Logo" class="logo"><!--logo-->
-<a href="./Home.html" class="nav-item">Home</a>
-<a href="#" class="nav-item">About</a>
-<form action="#" class="search-form"><!--search bar-->
-    <input type="text" placeholder="Search..." class="search-bar">
-    <button type="submit" class="search-button">Search</button>
-</form>
+    <header class="headerld">
+        <div class="navbarld">
+        <img src="../Images/Creaturepedia.png" alt="Logo" class="logold">
+        <a href="./Home.html" class="nav-itemld">Home</a>
+        <a href="#" class="nav-itemld">About</a>
+        <form action="#" class="search-formld">
+        <input type="text" placeholder="Search..." class="search-barld">
+        <button type="submit" class="search-buttonld">Search</button>
+        </form>
         </div>  
-</header>
+    </header>
 
 </div>
 
