--- a/project/HTML/orca.html
+++ b/project/HTML/orca.html
@@ -9,15 +9,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Jolly+Lodger&display=swap" rel="stylesheet">
 </head>
 <body class="orca-background">
-    <div class="navbar">
-        <img src="../Images/Creaturepedia.png" alt="Logo" class="logo">
-        <a href="./Home.html" class="nav-item">Home</a>
-        <a href="#" class="nav-item">About</a>
-        <form action="#" class="search-form">
-            <input type="text" placeholder="Search..." class="search-bar">
-            <button type="submit" class="search-button">Search</button>
+    <header class="headerld">
+        <div class="navbarld">
+        <img src="../Images/Creaturepedia.png" alt="Logo" class="logold">
+        <a href="./Home.html" class="nav-itemld">Home</a>
+        <a href="#" class="nav-itemld">About</a>
+        <form action="#" class="search-formld">
+        <input type="text" placeholder="Search..." class="search-barld">
+        <button type="submit" class="search-buttonld">Search</button>
         </form>
-    </div> 
+        </div>  
+    </header>
     <h1 class="jolly-lodger-regular">ORCA Whale</h1>
     <button id="various-backgrounds">Another Background!</button>
     <p class="orcatitle">Click on me to hear my sound!</p>
