--- a/project/HTML/Marine Description.html
+++ b/project/HTML/Marine Description.html
@@ -73,6 +73,11 @@
 
 
   <div class="vtypung-effect" id="vtyping-effect"></div>
+
+  <a href="./shark.html" target="_blank" class="vcircular-image-link">
+        <h3>Are you intrested in White Sharks? 
+          <br>Click here to read more about them</h3>
+</a>
   
   <div class="vfooter">
             <a href="./feedback.html" class="vRating">Rating</a>
