--- a/project/HTML/shark.html
+++ b/project/HTML/shark.html
@@ -9,8 +9,8 @@
 <body>
     <header>
         <div class="navbar"><!--navigation bar-->
-            <img src="logo s.png" alt="Logo" class="logo"><!--logo-->
-            <a href="#" class="nav-item">Home</a>
+            <img src="../Images/Creaturepedia.png" alt="Logo" class="logo"><!--logo-->
+            <a href="./Home.html" class="nav-item">Home</a>
             <a href="#" class="nav-item">About</a>
             <form action="#" class="search-form"><!--search bar-->
                 <input type="text" placeholder="Search..." class="search-bar">
@@ -147,7 +147,7 @@
         </style>
     </table>
     <video width="450" height="260" controls>
-        <source src="white shark.mp4" type="video/mp4">
+        <source src="../Media/white shark.mp4" type="video/mp4">
         <source src="white shark.ogg" type="video/ogg">
         Your browser does not support the video tag.
         <style>
@@ -160,7 +160,7 @@
     </video>
     <style>
     body {
-        background-image: url('shark.jpg');
+        background-image: url('../Images/shark.jpg');
         background-repeat: no-repeat;
         background-attachment: fixed;
         background-size: 100% 100%;
